--- a/h2.ipynb
+++ b/h2.ipynb
@@ -503,23 +503,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Jan Jansen .Jr - Nationality: Norway'"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan Jansen .Jr - Nationality: Norway\n"
+     ]
     }
    ],
    "source": [
-    "f\"{full_name_new} - Nationality: {nationality}\""
+    "sentence = f\"{full_name_new} - Nationality: {nationality}\"\n",
+    "print(sentence)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
