added rdw example

--- a/h3.ipynb
+++ b/h3.ipynb
@@ -409,6 +409,99 @@
    "source": [
     "person_2['pets'][1]['hobbies'][1]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignments\n",
+    "\n",
+    "Create a dictionary with an (imaginary) person with attributes like his name, age and hobbies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_1 = {\"name\": \"Arie\", \n",
+    "            \"age\": 30,\n",
+    "            \"hobbies\": ['wandelen', 'sport', 'modelbouw']}\n",
+    "\n",
+    "person_2 = {\"name\": \"Dirk\", \n",
+    "            \"age\": 40,\n",
+    "            \"hobbies\": ['tennis', 'football', 'surf']}\n",
+    "\n",
+    "person_3 = {\"name\": \"Michael\", \n",
+    "            \"age\": 50,\n",
+    "            \"hobbies\": ['programming', 'reading', 'writing']}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'surf'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "familiy = {}\n",
+    "familiy[\"name\"] = \"Jackson\"\n",
+    "familiy[\"members\"] = [person_1, person_2, person_3]\n",
+    "\n",
+    "familiy['members'][1]['hobbies'][-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Jackson',\n",
+       " 'members': [{'name': 'Arie',\n",
+       "   'age': 30,\n",
+       "   'hobbies': ['wandelen', 'sport', 'modelbouw']},\n",
+       "  {'name': 'Dirk', 'age': 40, 'hobbies': ['tennis', 'football', 'surf']},\n",
+       "  {'name': 'Michael',\n",
+       "   'age': 50,\n",
+       "   'hobbies': ['programming', 'reading', 'writing']}]}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "familiy"
+   ]
   }
  ],
  "metadata": {
