added assignments for standard library

--- a/h4.ipynb
+++ b/h4.ipynb
@@ -139,11 +139,349 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignments\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment 1\n",
+    "\n",
+    "Assign a variable that holds the number of days until your next birthday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2024, 9, 10)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_date = d.date.today()\n",
+    "current_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2024, 12, 5)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birthday_date = d.date(2024, 12, 5)\n",
+    "birthday_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(days=86)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "days_to_birthday = birthday_date - current_date\n",
+    "days_to_birthday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "days_to_birthday.days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2024, 10, 30)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_date + d.timedelta(days=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Vandaag is het Tuesday 10 September 2024'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_date_str = current_date.strftime(\"%A %d %B %Y\")\n",
+    "f\"Vandaag is het {current_date_str}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment 2\n",
+    "\n",
+    "Calculate the surface of a circle with a diameter of 10 (radius^ * pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.5"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "diameter = 10\n",
+    "radius = diameter / 2\n",
+    "\n",
+    "surface = math.pow(radius, 2) * math.pi\n",
+    "round(surface, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment \n",
+    "\n",
+    "Create list that contains the files in your current working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " 'export.csv',\n",
+       " 'export_x117lf.csv',\n",
+       " 'h2.ipynb',\n",
+       " 'h3.ipynb',\n",
+       " 'h4.ipynb',\n",
+       " 'hello.py',\n",
+       " 'import_rdw.ipynb',\n",
+       " 'my_folder']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "current_directory = os.listdir()\n",
+    "current_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['export.csv',\n",
+       " 'export_x117lf.csv',\n",
+       " 'h2.ipynb',\n",
+       " 'h3.ipynb',\n",
+       " 'h4.ipynb',\n",
+       " 'hello.py',\n",
+       " 'import_rdw.ipynb']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_files = [x for x in os.listdir() if os.path.isfile(x)]\n",
+    "my_dirs = [x for x in os.listdir() if os.path.isdir(x)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['export.csv',\n",
+       " 'export_x117lf.csv',\n",
+       " 'h2.ipynb',\n",
+       " 'h3.ipynb',\n",
+       " 'h4.ipynb',\n",
+       " 'hello.py',\n",
+       " 'import_rdw.ipynb']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git', 'my_folder']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dirs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment 4\n",
+    "\n",
+    "Add a directory with the name our_functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(\"folder/subfolder/subfolder1\", exist_ok=True)\n",
+    "os.makedirs(\"folder/subfolder/subfolder2\", exist_ok=True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "current_date_time = datetime.now()\n",
+    "current_date_time_str = current_date_time.strftime(\"%Y%m%d%H%M%S\")\n",
+    "folder_name = f\"export_{current_date_time_str}\"\n",
+    "\n",
+    "os.makedirs(f\"export/{folder_name}\")"
+   ]
   }
  ],
  "metadata": {
